fix flicker on text input

--- a/lhc_web/design/defaulttheme/css/widget.css
+++ b/lhc_web/design/defaulttheme/css/widget.css
@@ -97,10 +97,14 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 
 	html,body,#widget-layout,#widget-layout > .col-xs-12,#widget-content-body{
 		height:100%;
+		margin-top:0px!important;
+		margin-bottom:0px!important;
+		padding-bottom:0px!important;
+		padding-top:0px!important;
 	}
 
-	body{
-		padding-top:7px;
+	body {
+		padding-top:7px!important;
 	}
 
 	#widget-content-body {
@@ -117,7 +121,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 		font-size: 16px;
 		position: absolute;
 		width: 100%;
-		bottom: 60px;
+		bottom: 45px;
 		top:61px;
 		left: 0;
 	}
@@ -175,7 +179,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 
 	.has-chat #ChatMessageContainer {
 		position: absolute;
-		bottom: 15px;
+		bottom: 0px;
 		left: 0;
 		width: 100%;
 		height:45px;
@@ -183,7 +187,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 
 	#id-operator-typing{
 		position: absolute;
-		bottom: 60px;
+		bottom: 45px;
 		right:0;
 		background-color: #FFF;
 		border:1px solid #CCC;
@@ -199,7 +203,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 		height: 45px;
 		border-radius:0;
 		min-height:45px;
-		line-height: 40px;
+		line-height: 170%;
 		-webkit-appearance: none;
 		box-shadow: none !important;
 	}
